# Discord-IESB

./: .gitignore  CLEAN_ARCHITECTURE.md  README.md  db.json  main.py  manager.py  pyproject.toml  requirements.txt  test.py
comandos/: adm.py  audio.py  channels.py  eventos.py  member.py  moder.py  normy.py
comun/: getset.py  loggis.py  smalldb.py  temporarios.py  text.py  voice.py
data/: temp_channel_config.pkl
json/: temp_channel_config.json
slach/: slach_adm.py
src/: clean_commands.py  config.py  main.py  main_clean.py  manager.py
src/application/: __init__.py
src/application/commands/: __init__.py  adm.py  eventos.py  member.py
src/application/dtos/: __init__.py  bot_dtos.py  channel_dto.py  member_dto.py
src/application/slash_commands/: __init__.py  slach_adm.py  slach_normy.py  slash_temp_room.py
src/application/use_cases/: __init__.py  bot_use_cases.py  channel_use_cases.py
src/comandos/: adm.py  eventos.py
src/comun/: smalldb.py  text.py
src/domain/entities/: __init__.py  channel.py  guild.py  member.py
src/domain/events/: __init__.py  domain_event.py
src/domain/repositories/: __init__.py  category_database_repository.py  channel_repository.py
src/domain/services/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/database/: 001_add_cascade_constraint.sql  002_create_retention_policy.sql  __init__.py  audit_logger.py  auditoria_schema.sql  cleanup_manager.py  create_unique_channels_tables.sql  smalldb_manager.py  sql_manager.py
src/infrastructure/events/: README.md  __init__.py  event_bus.py  event_registry.py
src/infrastructure/events/subscribers/: __init__.py  analytics_subscriber.py  notification_subscriber.py  stats_subscriber.py
src/infrastructure/repositories/: __init__.py  discord_channel_repository.py  sqlite_category_repository.py
src/presentation/controllers/: __init__.py  bot_controller.py  channel_controller.py
src/presentation/views/: __init__.py  temp_room_control_view.py
